# MultimodalIntentFusion

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: __init__.py  settings.py
examples/: __init__.py  demo.py  interactive_demo.py  multimodal_test.py
src/: __init__.py  cli.py
src/core/: __init__.py  emotion.py  fusion_engine.py  llm.py  models.py  prosody.py  speech.py  vision.py
tests/: __init__.py  test_models.py
