[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-intent-fusion"
version = "0.1.0"
description = "Transform natural human communication into precise AI instructions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "MultimodalIntentFusion Team"}
]
keywords = [
    "ai", "nlp", "speech-to-text", "intent-recognition", 
    "multimodal", "emotion-detection", "llm"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "faster-whisper>=1.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "sounddevice>=0.4.6",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "opencv-python>=4.8.0",
    "opencv-contrib-python>=4.8.0",
    "deepface>=0.0.79",
    "mediapipe==0.10.14",
    "tensorflow>=2.13.0",
    "keras>=3.0.0",
    "protobuf==4.25.3",
    "ollama>=0.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
gpu = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

[project.scripts]
mif = "src.cli:cli"

[project.urls]
Homepage = "https://github.com/MihaiCiprianChezan/MultimodalIntentFusion"
Repository = "https://github.com/MihaiCiprianChezan/MultimodalIntentFusion"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

